tests/NormalTests/paczka1/small_fuzzy/42414840.err
Error in line 2: pqotaPFm S897 33,7
Error in line 5: zZ94Djl 360 31,2
Error in line 1: Po3WF S95 27,3
Error in line 11: d3qOJ0uCvW S329 29,9
Error in line 13: d3qOJ0uCvW S897 94,1
